fix nav button shadows and z-index

--- a/style.css
+++ b/style.css
@@ -154,16 +154,21 @@ nav li.active a {
         background: var(--white);
     }
 
-    #btn-top, #btn-bottom, #btn-nav.closed {
+    .btn-navi {
         box-shadow: 0px 0px 6px -1px var(--middlegray);
     }
 
+    #btn-top, #btn-bottom {
+        z-index: 3;
+        height: 50px;
+    }
+
     #btn-top {
-        top: 62px;
+        top: 64px;
     }
 
     #btn-bottom {
-        bottom: 1px;
+        bottom: 4px;
     }
 
     #btn-nav.closed {
